# esp32s3-temp-sensor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  Temperature-Sensor.c  max31856.c  max31856.h  nvs_kv.c  nvs_kv.h  portal.c  portal.h  wifi_mgr.c  wifi_mgr.h
