#CMakeLists.txt
idf_component_register(
  SRCS
    "Temperature-Sensor.c"
    "wifi_mgr.c"
    "portal.c"
    "nvs_kv.c"
    "max31856.c"
  INCLUDE_DIRS "."
  REQUIRES
    esp_http_client
    esp_http_server
    esp-tls
    esp_wifi
    esp_event
    esp_netif
    nvs_flash
    driver
    esp_timer
  PRIV_REQUIRES
    wpa_supplicant
)
